# diangit

./: CMakeLists.txt  readme.md
include/: command.h  compress.h  sha1.h  step2.h  tool.h
src/: command.c  compress.c  main.c  sha1.c  step1.c  step2.c  step3.c  step4.c  step5.c  step6.c  tool.c
